[gd_scene load_steps=5 format=3 uid="uid://x83i8cfjst2t"]

[ext_resource type="Texture2D" uid="uid://7ulx1r07x862" path="res://assets/asteroid.png" id="1_rnuwn"]
[ext_resource type="Script" path="res://scenes/asteroid/collectible/collectible_asteroid.gd" id="2_jhn01"]
[ext_resource type="Script" path="res://customs/nodes/player_revolution_component/player_revolution_component.gd" id="3_efdi8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0wxfq"]
radius = 8.0

[node name="CollectibleAsteroid" type="RigidBody2D" node_paths=PackedStringArray("sprite", "player_revolution")]
collision_layer = 4
collision_mask = 7
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("2_jhn01")
sprite = NodePath("Sprite2D")
player_revolution = NodePath("PlayerRevolutionComponent")

[node name="Sprite2D" type="Sprite2D" parent="."]
light_mask = 0
texture = ExtResource("1_rnuwn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0wxfq")

[node name="PlayerRevolutionComponent" type="Node2D" parent="."]
script = ExtResource("3_efdi8")
max_distance = 100.0

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true

[connection signal="player_revolved" from="PlayerRevolutionComponent" to="." method="_on_player_revolved"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
